# documentdb

./: .gitattributes  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Makefile.cflags  README.md  documentdb_errors.csv  error_mappings.csv  index.html  rust-toolchain.toml  syncpoint_oss.txt
pg_documentdb_gw/: CONTRIBUTING.md  Cargo.toml  Makefile  Makefile.toml  NOTICE  SetupConfiguration.json
pg_documentdb_gw/.cargo/: config.toml
pg_documentdb_gw/documentdb_gateway/: Cargo.toml
pg_documentdb_gw/documentdb_gateway/src/: bootstrap.rs  check.rs  cli.rs  main.rs
pg_documentdb_gw/documentdb_gateway_core/: Cargo.toml  build.rs
pg_documentdb_gw/documentdb_gateway_core/benches/: hot_path_bench.rs  request_insert_bench.rs
pg_documentdb_gw/documentdb_gateway_core/src/: auth.rs  bson.rs  error.rs  lib.rs  startup.rs
pg_documentdb_gw/documentdb_gateway_core/src/collections/: mod.rs
pg_documentdb_gw/documentdb_gateway_core/src/collections/cache/: async_cache_trait.rs  cache_trait.rs  config.rs  error.rs  mod.rs  ttl_cache.rs
pg_documentdb_gw/documentdb_gateway_core/src/configuration/: dynamic.rs  mod.rs  pg_configuration.rs  setup.rs  setup_tests.rs
pg_documentdb_gw/documentdb_gateway_core/src/context/: connection.rs  mod.rs  request.rs  service.rs  store_key.rs
pg_documentdb_gw/documentdb_gateway_core/src/context/cursor/: cursor_id.rs  cursor_store.rs  gateway_cursor.rs  mod.rs
pg_documentdb_gw/documentdb_gateway_core/src/context/session/: mod.rs  session_id.rs  session_manager.rs
pg_documentdb_gw/documentdb_gateway_core/src/context/transaction/: gateway_transaction.rs  mod.rs  transaction_error.rs  transaction_number.rs  transaction_store.rs
pg_documentdb_gw/documentdb_gateway_core/src/explain/: documentdb_explain_output.schema.json  mod.rs  model.rs  query_diagnostics.rs
pg_documentdb_gw/documentdb_gateway_core/src/postgres/: data_client.rs  documentdb_data_client.rs  query_catalog.rs  transaction.rs
pg_documentdb_gw/documentdb_gateway_core/src/postgres/conn_mgmt/: connection.rs  connection_pool.rs  mod.rs  pool_manager.rs  pool_metrics.rs  pool_settings.rs  query_dispatch.rs  retry_policies.rs
pg_documentdb_gw/documentdb_gateway_core/src/processor/: constant.rs  cursor.rs  data_description.rs  data_management.rs  indexing.rs  ismaster.rs  process.rs  session.rs  transaction.rs
pg_documentdb_gw/documentdb_gateway_core/src/protocol/: bson_scanner.rs  header.rs  message.rs  mod.rs  op_insert.rs  op_query.rs  opcode.rs  reader.rs
pg_documentdb_gw/documentdb_gateway_core/src/requests/: common_fields.rs  info.rs  message.rs  mod.rs  read_concern.rs  read_preference.rs  request.rs  request_tracker.rs  request_type.rs  validation.rs  wire_request.rs
pg_documentdb_gw/documentdb_gateway_core/src/responses/: custom_error_mapping.rs  custom_pg_db_error.rs  error.rs  mod.rs  pg.rs  raw.rs  writer.rs
pg_documentdb_gw/documentdb_gateway_core/src/runtime/: mod.rs  v1.rs
pg_documentdb_gw/documentdb_gateway_core/src/security/: mod.rs  principal.rs
pg_documentdb_gw/documentdb_gateway_core/src/service/: docdb_openssl.rs  listener_config.rs  mod.rs  tcp_listener.rs  tls.rs  tls_state_dir.rs  tls_tests.rs
pg_documentdb_gw/documentdb_gateway_core/src/service/connection_loop/: error_reply.rs  mod.rs  read_ahead.rs  request_execution.rs  (+2 more)
pg_documentdb_gw/documentdb_gateway_core/src/telemetry/: config.rs  context_propagation.rs  log_request_fail.rs  metrics.rs  mod.rs  sql_commenter.rs  telemetry_manager.rs  telemetry_provider.rs  tracing_export.rs  utils.rs
pg_documentdb_gw/documentdb_gateway_core/src/testing/: connection_context.rs  dynamic_configuration.rs  env_guard.rs  mod.rs  op_msg.rs  pool.rs  request_documents.rs  telemetry.rs
pg_documentdb_gw/documentdb_gateway_core/src/time/: epoch_clock.rs  mod.rs
pg_documentdb_gw/documentdb_gateway_lib/: Cargo.toml
pg_documentdb_gw/documentdb_gateway_lib/src/: lib.rs
pg_documentdb_gw/documentdb_macros/: Cargo.toml
pg_documentdb_gw/documentdb_macros/src/: lib.rs
pg_documentdb_gw/documentdb_tests/: Cargo.toml
pg_documentdb_gw/documentdb_tests/src/commands/: constant.rs  cursor.rs  mod.rs  reindex.rs  roles.rs  session.rs  unsupported_commands.rs  users.rs
pg_documentdb_gw/documentdb_tests/src/test_setup/: config.rs  configuration_utils.rs  mod.rs
pg_documentdb_gw/documentdb_tests/src/utils/: commands.rs  mod.rs  rbac_utils.rs
pg_documentdb_gw/documentdb_tests/tests/: connection_pool_tests.rs  pg_configuration_tests.rs  reindex_tests.rs  role_crud_tests.rs  user_crud_tests.rs  write_errors_tests.rs
pg_documentdb_gw/include/: all_error_mappings_oss_generated.csv
pg_documentdb_gw/libs/tokio-postgres/: Cargo.toml
pg_documentdb_gw/libs/tokio-postgres/benches/: read_buffer_bench.rs
pg_documentdb_gw/libs/tokio-postgres/src/: client.rs  codec.rs  config.rs  connect_raw.rs  connection.rs  lib.rs
pg_documentdb_gw/scripts/: run_gateway_heaptrack.sh
pg_documentdb_gw/src/: auth.rs  error.rs  lib.rs  main.rs  startup.rs
pg_documentdb_gw/src/configuration/: dynamic.rs  mod.rs  pg_configuration.rs  setup.rs
pg_documentdb_gw/src/context/: connection.rs  cursor.rs  service.rs  transaction.rs
pg_documentdb_gw/src/explain/: mod.rs  model.rs  query_diagnostics.rs
pg_documentdb_gw/src/postgres/: connection.rs  data_client.rs  documentdb_data_client.rs  mod.rs  query_catalog.rs  transaction.rs
pg_documentdb_gw/src/postgres/conn_mgmt/: connection.rs  connection_pool.rs  mod.rs  pool_manager.rs  pool_settings.rs
pg_documentdb_gw/src/processor/: constant.rs  cursor.rs  data_description.rs  data_management.rs  indexing.rs  ismaster.rs  process.rs  session.rs  transaction.rs
pg_documentdb_gw/src/protocol/: opcode.rs  reader.rs
pg_documentdb_gw/src/requests/: mod.rs  request_tracker.rs
pg_documentdb_gw/src/responses/: error.rs  pg.rs  writer.rs
pg_documentdb_gw/src/service/: mod.rs  tls.rs
pg_documentdb_gw/tests/: invalid_index_tests.rs  killop_tests.rs  pool_manager_tests.rs  sessions_tests.rs
pg_documentdb_gw/tests/common/: mod.rs
(+906 files in other folders)
