## Workspace section

[workspace]
members = [
    "documentdb_gateway",
    "documentdb_gateway_core",
    "documentdb_macros",
    "documentdb_tests"
]
# Locally vendored, patched copy of tokio-postgres (see [patch.crates-io] below).
# Excluded so it is built only as a patched dependency, not as a workspace member.
exclude = [
    "libs/tokio-postgres"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/documentdb/documentdb"
readme = "../README.md"
keywords = ["documentdb", "gateway"]
categories = ["database"]

[workspace.dependencies]
arc-swap = "1.9.1"
async-trait = "0.1.89"
base64 = "0.22.1"
bitflags = "1.3.2"
bson = "2.15.0"
bytes = "1.11.1"
criterion = { version = "0.8.2", features = ["async_tokio", "html_reports"] }
dashmap = { version = "6.1.0", default-features = false, features = ["inline"] }
deadpool = { version = "0.12.3", features = ["rt_tokio_1"] }
deadpool-postgres = "0.14.1"
documentdb_macros = { path = "documentdb_macros" }
documentdb_gateway_core = { path = "documentdb_gateway_core" }
dyn-clone = "1.0.20"
either = "1.15.0"
futures = "0.3.32"
hex = "0.4.3"
mimalloc = "0.1.52"
# mongodb rust driver that we use to write test cases for DocumentDB
mongodb = { version = "3.6.0", default-features = false, features = [
    "openssl-tls",
    "compat-3-0-0",
] }
once_cell = "1.21.4"
openssl = "0.10.79"
opentelemetry = { version = "0.30", features = ["metrics", "trace"] }
opentelemetry-otlp = { version = "0.30", features = ["grpc-tonic", "metrics", "trace"] }
opentelemetry_sdk = { version = "0.30", features = ["rt-tokio", "metrics", "trace"] }
rand = "0.10.0"
regex = "1.12.3"
scc = { version = "3.7.0", features = ["equivalent", "serde"] }
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = { version = "1.0.149", features = ["arbitrary_precision"] }
socket2 = "0.6.4"
strum_macros = "0.28.0"
tokio = { version = "1", features = ["full", "tracing"] }
tokio-openssl = "0.6.5"
tokio-postgres = { version = "0.7.18", features = ["with-serde_json-1", "array-impls"] }
tokio-util = "0.7.18"
tracing = "0.1.44"
tracing-opentelemetry = "0.31"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
uuid = { version = "1.23.1", features = ["v4"] }
whoami = "2.0.1"

[workspace.lints.rust]
ambiguous_negative_literals = "warn"
missing_debug_implementations = "warn"
redundant_imports = "warn"
redundant_lifetimes = "warn"
trivial_numeric_casts = "warn"
unsafe_op_in_unsafe_fn = "warn"
unused_lifetimes = "warn"

[workspace.lints.clippy]
cargo = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

# These lints are from the `restriction` lint group and prevent specific
# constructs being used in source code in order to drive up consistency,
# quality, and brevity
absolute_paths = "warn"
allow_attributes = "warn"
allow_attributes_without_reason = "warn"
as_pointer_underscore = "warn"
assertions_on_result_states = "warn"
clone_on_ref_ptr = "warn"
deref_by_slicing = "warn"
disallowed_script_idents = "warn"
expect_used = "warn"
empty_drop = "warn"
empty_enum_variants_with_brackets = "warn"
empty_structs_with_brackets = "warn"
fn_to_numeric_cast_any = "warn"
get_unwrap = "warn"
if_then_some_else_none = "warn"
map_err_ignore = "warn"
redundant_type_annotations = "warn"
renamed_function_params = "warn"
semicolon_outside_block = "warn"
str_to_string = "warn"
undocumented_unsafe_blocks = "warn"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc = "warn"
unneeded_field_pattern = "warn"
unused_result_ok = "warn"
unwrap_in_result = "warn"
unwrap_used = "warn"
use_debug = "warn"

# Define custom opt outs here
# TODO: tackle this issue down in the separate PR
multiple_crate_versions = "allow"
# May cause issues with structured logging otherwise.
literal_string_with_formatting_args = "allow"
# If the function has side-effects, not calling it will change the semantic of the program
or_fun_call = "allow"
# Convolutes code
option_if_let_else = "allow"

## Profile section

[profile.release-with-symbols]
inherits = "release"
# Generates the minimal amount of debug info for backtraces with filename/line number info, but not anything else
debug = "line-tables-only"
opt-level = 3
lto = "fat"
codegen-units = 1

[profile.profiling]
inherits = "release"
debug = true